--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase-admin": "^11.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "util": "^0.12.4",
     "uuid": "^8.3.2",
